# samoyed

./: .gitignore  .markdownlint.json  .release-plz.toml  .tarpaulin.toml  .yamllint  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  clippy.toml  flake.nix  install.sh  samoid.toml  samoyed.toml  uninstall.sh
.cargo/: config.toml
.claude/: settings.json
.claude/agents/: github-actions-auditor.md  rust-code-improver.md  rust-release-pipeline.md
.docs/: 01-vision-version-2.0.0.md  01-vision.md  02-bash-curl-install.md  03-release-plz-pat-setup.md
.docs/prompts/: 01-implement-version-2.0.0.md  02-implement-version-2.0.0-integration-tests.md  03-fix-version-2.0.0-integration-tests.md
.github/: FUNDING.yml  dependabot.yml
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  distribution-packaging.yml  feature-request.yml  general.yml  infrastructure.yml  quality-enhancement.yml  technical-debt.yml
.github/workflows/: README.md  bot-pr-status.yml  ci.yml  perf.yml  release-plz.yml  release-pr.yml  release.yml  samoyed-release-public.key  test.yml
.github/workflows/scripts/: perf-compare.js
.samoid/scripts/: pre-push
.samoyed/: pre-commit  pre-push
.samoyed/scripts/: pre-commit  pre-push
analysis/: 001-adding-label-failed.md  003-dependency-injection-test-isolation.md
assets/: samoyed
knol/analysis/: 002-cargo-wrong-directory.md  004-github-branch-protection-setup-errors.md
knol/references/: 003-rust-code-review-reference.md  rust-2024-reference.md  rust-testing-reference.md
knol/requirements/: 002-cli-interface.md  003-hook-runner.md  006-error-handling.md  007-cross-platform-compatibility.md  008-performance-optimization.md  011-release-management.md
knol/stash/: acceptance-criteria.md
knol/workflows/: .markdownlint.json  001-accomplish-issue-v1.md  001-accomplish-issue-v2.md  002-accomplish-issue-v2.md  003-refine-issue-v1.md
requirements/: 001-core-installation.md  002-cli-interface.md  003-hook-runner.md  004-environment-control.md  005-git-hooks-support.md  006-error-handling.md  007-package-manager-integration.md  008-performance-optimization.md  008-typescript-definitions.md  009-cross-platform-compatibility.md  009-test-infrastructure.md  010-cicd-pipeline.md  010-performance-optimization.md  011-test-infrastructure.md
samoid/: .tarpaulin.toml  Cargo.toml
samoid/.samoid/scripts/: pre-commit
samoid/benches/: benchmark.rs
samoid/src/: config.rs  environment.rs  exit_codes.rs  git.rs  hook_runner.rs  hooks.rs  init.rs  installer.rs  lib.rs  logging.rs  main.rs  project.rs
samoid/tests/: comprehensive_integration_tests.rs  cross_platform_shell_execution.rs  cross_platform_tests.rs  error_handling_tests.rs  installation_tests.rs  integration_test.rs  linux_tests.rs  macos_tests.rs  validation_tests.rs  windows_tests.rs
scripts/: run-tests.sh
src/: config.rs  environment.rs  exit_codes.rs  git.rs  hook_runner.rs  hooks.rs  init.rs  installer.rs  lib.rs  logging.rs  main.rs  project.rs
src/unit_tests/: config_tests.rs  environment_tests.rs  exit_codes_tests.rs  git_tests.rs  hook_runner_tests.rs  hooks_tests.rs  init_tests.rs  installer_tests.rs  logging_tests.rs  main_tests.rs  project_tests.rs
tests/: cross_platform_shell_execution.rs  error_handling_tests.rs  installation_tests.rs  linux_tests.rs  macos_tests.rs  validation_tests.rs  windows_tests.rs
tests/benches/: benchmark.rs
tests/benchmark_tests/: benchmark.rs
tests/integration/: 01_default.sh  02_custom_dir.sh  03_from_subdir.sh  04_not_git_dir.sh  05_git_not_found.sh  06_command_not_found.sh  07_set_u.sh  07_strict_mode.sh  08_samoyed_0.sh  08_set_u.sh  09_init.sh  10_time.sh  functions.sh
tests/integration_tests/: error_handling_tests.rs  linux_tests.rs
workflows/: 001-accomplish-issue.md
