[package]
name = "samoyed"
version = "0.1.17"
authors = ["Behrang Saeedzadeh <hello@behrang.org>"]
edition = "2024"
rust-version = "1.88.0"
readme = "README.md"
homepage = "https://github.com/nutthead/samoyed"
repository = "https://github.com/nutthead/samoyed"
license = "MIT"
description = "A single-binary Git hooks manager"
keywords = ["git", "git-hooks", "git-hooks-manager", "husky"]
exclude = [
  ".claude/",
  ".github/",
  ".gitignore",
  ".samoyed/",
  "docs/",
  "src/unit_tests/",
  "tests/",
  ".markdownlint.json",
  ".tarpaulin.toml",
  "CLAUDE.md",
  "samoyed.toml",
]


[[bin]]
name = "samoyed"
path = "src/main.rs"


[[bin]]
name = "samoyed-hook"
path = "src/hook_runner.rs"


[dependencies]
clap = { version = "4.5", features = ["derive"] }
toml = "0.9"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"


[dev-dependencies]
tempfile = "3.13"
criterion = "0.7"


[[bench]]
name = "benchmark"
harness = false
path = "tests/benchmark_tests/benchmark.rs"


[profile.release]
opt-level = "z"   # Optimize for size over speed
lto = true        # Link-time optimization (performance + size)
codegen-units = 1 # Single codegen unit (better optimization)
strip = true      # Remove debug symbols (size)


[profile.release.package."*"]
opt-level = "z" # Optimize for size over speed for dependencies


[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin_include)'] }
