[package]
name = "samoyed"
version = "0.2.0"
authors = ["Behrang Saeedzadeh <hello@behrang.org>"]
edition = "2024"
rust-version = "1.90.0"
readme = "README.md"
homepage = "https://github.com/nutthead/samoyed"
repository = "https://github.com/nutthead/samoyed"
license = "MIT"
description = "A single-binary, minimal, cross-platform Git hooks manager"
keywords = ["git", "git-hooks", "git-hooks-manager", "husky"]
exclude = [
  ".claude/",
  ".github/",
  ".gitignore",
  ".samoyed/",
  ".docs/",
  "src/unit_tests/",
  ".markdownlint.json",
  ".tarpaulin.toml",
  "CLAUDE.md",
  "samoyed.toml",
]


[[bin]]
name = "samoyed"
path = "src/main.rs"


[dependencies]
clap = { version = "4.5.48", features = ["derive"] }


[profile.release]
opt-level = 3     # Optimize for speed
lto = "fat"       # Link Time Optimization (better optimization)
codegen-units = 1 # Single codegen unit (better optimization)
strip = true      # Remove debug symbols (size)


[profile.release.package."*"]
opt-level = 3     # Optimize for speed
codegen-units = 1 # Single codegen unit (better optimization)
strip = true      # Remove debug symbols (size)
